# word-chain-game-with-ai-cli

./: .env.example  .gitignore  README.md  pyproject.toml
tests/: test_cli.py  test_service.py  test_words.py
word_chain/: ai_client.py  cli.py  models.py  repository.py  service.py  words.py
word_chain/data/: words.txt
